[package]
name = "band_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1", features = ["full"] }
gtk = { version = "0.9.2", features = ["v3_16"] }
glib = "0.10"



